Fixed letter-spacing

--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,5 +1,5 @@
 .cover__subtitle {
-  max-width: 350px;
+  max-width: 370px;
   font-size: 18px;
   line-height: 1.22;
   text-align: center;
