--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,7 +1,7 @@
 .footer__link {
   text-decoration: none;
   color: #FFFFFF;
-  padding-right: 17px;
+  padding-right: 14px;
   font-size: 16px;
   line-height: 1.125;
 }
