--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,12 +1,11 @@
 .footer {
   padding: 92px 48px 24px 48px;
-  
   max-width: 1184px;
   margin: 0 auto;
-  
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
+  align-items: baseline;
 }
 
 @media screen and (max-width: 980px) {
@@ -18,7 +17,6 @@
 @media screen and (max-width: 710px) {
   .footer {
     display: grid;
-    
     padding: 64px 16px 24px 16px;
   }
 }
