--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,7 +1,6 @@
 .intro__text {
   font-size: 16px;
   line-height: 1.63;
-  letter-spacing: 0.4px;
   margin: 0;
   margin-bottom: 33px;
 }
