--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,7 +2,7 @@
   max-width: 460px;
   font-weight: 900;
   font-size: 72px;
-  line-height: 1.05;
+  line-height: 1.055;
   margin: 0;
   align-self: end;
 }
